--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ script:
   - GOOS=linux GOARCH=arm CGO_ENABLED=0 go build -ldflags "-X main.Version=${TRAVIS_TAG:-git+${TRAVIS_COMMIT}}" -o bin/kd_linux_arm
   - GOOS=darwin GOARCH=amd64 CGO_ENABLED=0 go build -ldflags "-X main.Version=${TRAVIS_TAG:-git+${TRAVIS_COMMIT}}" -o bin/kd_darwin_amd64
   - GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build -ldflags "-X main.Version=${TRAVIS_TAG:-git+${TRAVIS_COMMIT}}" -o bin/kd_windows_amd64.exe
+  - docker login -u "ukhomeofficedigital+kubernetes_deploy_kd" -p ${DOCKER_PASSWORD} quay.io;
+  - docker build -t quay.io/ukhomeofficedigital/kd:${TRAVIS_COMMIT} .;
+  - docker push quay.io/ukhomeofficedigital/kd:${TRAVIS_COMMIT};
   - if ([[ ${TRAVIS_BRANCH} == "master" ]] && [[ ${TRAVIS_EVENT_TYPE} == "push" ]]) || [[ -n ${TRAVIS_TAG} ]]; then
     docker login -u "ukhomeofficedigital+kubernetes_deploy_kd" -p ${DOCKER_PASSWORD} quay.io;
     docker build -t quay.io/ukhomeofficedigital/kd:${TRAVIS_TAG:-latest} .;
